--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container" id="container">
         <div class="info">
-            <h4 id="title"></h4>
+            <h4 id="title">Herbal Tea - Artificial Music</h4>
             <div class="progress-bar" id="progress-bar">
                 <div class="progress" id="progress"></div>
             </div>
