Javascript done changed file names and some css fixes currently issues with going to next or previous music causes it ont autoplay will fix later on

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
         <audio id="audio" src="music/herbal tea - Artificial.Music.mp3"></audio>
         <div class="img">
-            <img src="images/herbal-tea.jpg" id="cover" alt="Cover">
+            <img src="" id="cover" alt="Cover">
         </div>
         <div class="controls">
             <button id="prev" class="action-btn"><i class="fa fa-backward"></i></button>
